@@ -1,114 +1,110 @@
 package no.ntnu.idatx2003.millions.io;
 
+import no.ntnu.idatx2003.millions.exception.InvalidStockDataException;
 import no.ntnu.idatx2003.millions.model.Stock;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
 
-import java.io.File;
 import java.io.IOException;
+import java.io.StringReader;
+import java.io.StringWriter;
 import java.math.BigDecimal;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-@DisplayName("CSV Reader/Writer Tests")
+@DisplayName("CSV stock reader and writer")
 class StockCsvTest {
-    @TempDir
-    Path tempDir;
-
-    private List<Stock> testStocks;
+    private StockDataReader reader;
+    private StockDataWriter writer;
+    private List<Stock> stocks;
 
     @BeforeEach
     void setUp() {
-        testStocks = new ArrayList<>();
-        testStocks.add(new Stock("AAPL", "Apple Inc.", new BigDecimal("150.50")));
-        testStocks.add(new Stock("MSFT", "Microsoft", new BigDecimal("300.75")));
+        reader = new CsvStockReader();
+        writer = new CsvStockWriter();
+        stocks = List.of(
+                new Stock("AAPL", "Apple Inc.", new BigDecimal("150.50")),
+                new Stock("MSFT", "Microsoft", new BigDecimal("300.75")));
     }
 
-    @DisplayName("Write and read: preserves stock data")
+    @DisplayName("read parses valid stock data from a Reader")
     @Test
-    void testWriteAndRead() throws IOException {
-        Path csvFile = tempDir.resolve("stocks.csv");
-        StockCsvWriter.writeStocks(csvFile.toString(), testStocks);
+    void read_whenCsvIsValid_returnsStocks() throws IOException, InvalidStockDataException {
+        String csv = "# Ticker,Name,Price\n"
+                + "\n"
+                + "AAPL,Apple Inc.,150.50\n"
+                + "MSFT,Microsoft,300.75\n";
 
-        List<Stock> readStocks = StockCsvReader.readStocks(csvFile.toFile());
+        List<Stock> parsedStocks = reader.read(new StringReader(csv));
 
-        assertEquals(2, readStocks.size());
-        assertEquals("AAPL", readStocks.get(0).getSymbol());
-        assertEquals("Apple Inc.", readStocks.get(0).getCompany());
-        assertEquals(0, readStocks.get(0).getSalesPrice().compareTo(new BigDecimal("150.50")));
+        assertEquals(2, parsedStocks.size());
+        assertEquals("AAPL", parsedStocks.getFirst().getSymbol());
+        assertEquals("Apple Inc.", parsedStocks.getFirst().getCompany());
+        assertEquals(0, new BigDecimal("150.50").compareTo(parsedStocks.getFirst().getSalesPrice()));
     }
 
-    @DisplayName("Read: handles comments and blank lines")
+    @DisplayName("read ignores comments and blank lines")
     @Test
-    void testRead_commentsAndBlankLines() throws IOException {
-        Path csvFile = tempDir.resolve("stocks_with_comments.csv");
-        String content = "# This is a comment\n" +
-                "# Ticker,Name,Price\n" +
-                "\n" +
-                "AAPL,Apple Inc.,150.50\n" +
-                "\n" +
-                "MSFT,Microsoft,300.75\n";
-        Files.write(csvFile, content.getBytes());
+    void read_whenCsvHasCommentsAndBlankLines_ignoresThem() throws IOException, InvalidStockDataException {
+        String csv = "# This is a comment\n"
+                + "# Ticker,Name,Price\n"
+                + "\n"
+                + "AAPL,Apple Inc.,150.50\n"
+                + "\n"
+                + "MSFT,Microsoft,300.75\n";
 
-        List<Stock> stocks = StockCsvReader.readStocks(csvFile.toFile());
+        List<Stock> parsedStocks = reader.read(new StringReader(csv));
 
-        assertEquals(2, stocks.size());
+        assertEquals(2, parsedStocks.size());
     }
 
-    @DisplayName("Read: throws exception for invalid format")
+    @DisplayName("read throws InvalidStockDataException for wrong field count")
     @Test
-    void testRead_invalidFormat() throws IOException {
-        Path csvFile = tempDir.resolve("invalid.csv");
-        String content = "AAPL,Apple Inc.,150.50,Extra\n"; // Too many fields
-        Files.write(csvFile, content.getBytes());
+    void read_whenCsvHasWrongFieldCount_throwsInvalidStockDataException() {
+        String csv = "AAPL,Apple Inc.,150.50,Extra\n";
 
-        assertThrows(IllegalArgumentException.class,
-                () -> StockCsvReader.readStocks(csvFile.toFile()));
+        assertThrows(InvalidStockDataException.class, () -> reader.read(new StringReader(csv)));
     }
 
-    @DisplayName("Read: throws exception for invalid price")
+    @DisplayName("read throws InvalidStockDataException for invalid price")
     @Test
-    void testRead_invalidPrice() throws IOException {
-        Path csvFile = tempDir.resolve("invalid_price.csv");
-        String content = "AAPL,Apple Inc.,notanumber\n";
-        Files.write(csvFile, content.getBytes());
+    void read_whenPriceIsInvalid_throwsInvalidStockDataException() {
+        String csv = "AAPL,Apple Inc.,notanumber\n";
 
-        assertThrows(IllegalArgumentException.class,
-                () -> StockCsvReader.readStocks(csvFile.toFile()));
+        assertThrows(InvalidStockDataException.class, () -> reader.read(new StringReader(csv)));
     }
 
-    @DisplayName("Read: throws exception for negative price")
+    @DisplayName("read throws InvalidStockDataException for negative price")
     @Test
-    void testRead_negativePrice() throws IOException {
-        Path csvFile = tempDir.resolve("negative_price.csv");
-        String content = "AAPL,Apple Inc.,-150.50\n";
-        Files.write(csvFile, content.getBytes());
+    void read_whenPriceIsNegative_throwsInvalidStockDataException() {
+        String csv = "AAPL,Apple Inc.,-150.50\n";
 
-        assertThrows(IllegalArgumentException.class,
-                () -> StockCsvReader.readStocks(csvFile.toFile()));
+        assertThrows(InvalidStockDataException.class, () -> reader.read(new StringReader(csv)));
     }
 
-    @DisplayName("Write: creates properly formatted file")
+    @DisplayName("read throws InvalidStockDataException for blank symbol")
     @Test
-    void testWrite_format() throws IOException {
-        Path csvFile = tempDir.resolve("test_output.csv");
-        StockCsvWriter.writeStocks(csvFile.toString(), testStocks);
+    void read_whenSymbolIsBlank_throwsInvalidStockDataException() {
+        String csv = " ,Apple Inc.,150.50\n";
 
-        List<String> lines = Files.readAllLines(csvFile);
+        assertThrows(InvalidStockDataException.class, () -> reader.read(new StringReader(csv)));
+    }
 
-        // Should have header (3 lines) + 2 stocks + 1 blank = 6 lines, but actual is 5
-        // Header and stocks only, no trailing blank line
-        assertEquals(5, lines.size());
-        // Check first stock line (after blank line from header)
+    @DisplayName("write creates properly formatted CSV")
+    @Test
+    void write_whenStocksAreValid_writesCsv() throws IOException {
+        StringWriter output = new StringWriter();
+
+        writer.write(output, stocks);
+
+        String csv = output.toString();
+        List<String> lines = csv.lines().toList();
+        assertEquals("# Stock Exchange Data", lines.get(0));
+        assertEquals("# Ticker,Name,Price", lines.get(1));
         assertEquals("AAPL,Apple Inc.,150.50", lines.get(3));
+        assertEquals("MSFT,Microsoft,300.75", lines.get(4));
     }
 }
-
-
